--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-
 body {
     padding: 0px;
     margin: 0px;
@@ -35,7 +34,6 @@ body {
 .menu-list {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
     align-items: center;
     gap: 50px;
     margin-right: 10px;
@@ -43,7 +41,7 @@ body {
 }
 
 .menu-list li {
-     font-size: 14px; 
+    font-size: 14px;
     font-weight: 500;
     line-height: 13px;
     letter-spacing: 0.06em;
@@ -54,7 +52,7 @@ body {
     cursor: pointer;
 }
 
-.menu-list li:first-child{
+.menu-list li:first-child {
     font-weight: 900;
     color: black;
 
@@ -75,19 +73,21 @@ body {
 
 
 
-.main-part{padding-left: 390px;}
+.main-part {
+    padding-left: 390px;
+}
 
 
 
 .heading {
     color: #000;
     font-family: Roboto;
-    font-size: 36px; 
+    font-size: 36px;
     font-weight: 700;
     line-height: 42px;
     letter-spacing: 0em;
     text-align: left;
-  
+
 }
 
 .paragraph {
@@ -120,21 +120,21 @@ body {
     height: 30px;
     width: 63px;
     box-sizing: border-box;
-    border-left: 1px solid #E5E5E5; 
+    border-left: 1px solid #E5E5E5;
     font-weight: 500;
     padding: 0px;
 }
 
 
 
- .currency-list li:first-child {
+.currency-list li:first-child {
     border-left: none;
     border-radius: 2px 0px 0px 2px;
-} 
+}
 
-.currency-list li:last-child{
+.currency-list li:last-child {
     border-radius: 0px 2px 2px 0px;
-   
+
 }
 
 
@@ -146,7 +146,7 @@ body {
     width: 250px;
     height: 102px;
     flex-shrink: 0;
-    /* padding-left: 10px; */
+
 
 }
 
@@ -166,7 +166,7 @@ body {
 
 
 
-.exchange-rate  {
+.exchange-rate {
     margin-left: 15px;
     margin-bottom: 4px;
     height: 28px;
@@ -178,7 +178,7 @@ body {
     text-align: left;
 }
 
-.result-exchange{
+.result-exchange {
     margin-left: 15px;
     margin-bottom: 4px;
     height: 28px;
@@ -192,5 +192,5 @@ body {
 
 .currency-div {
     display: flex;
-    gap:260px;
+    gap: 260px;
 }
